Fix: adjust font size of slideshow page title for better visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,7 +616,7 @@ body.slideshow-active .caption {
     left: 1rem;
   }
   body.slideshow-active .hero .page-title {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     right: 1rem;
     top: 2.5rem;
   }
